增加了自动上传loc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">天气4</string>
-    <string name="title_activity_weather_acticity">WeatherActicity</string>
+    <string name="app_name">和风天气</string>
+
 </resources>
